--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "mongoose": "^5.5.6",
     "mongoose-currency": "^0.2.0",
     "morgan": "~1.9.1",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^5.0.1",
     "session-file-store": "^1.2.0"
   },
   "description": "Authentication Server",
